Jun 6, 2007

  * FIXED: Strict XML comment syntax.  Jacco van Ossenbruggen.
  * FIXED: give error on bad entities in XML mode.  Jacco van Ossenbruggen.

Feb 6, 2007

  * MODIFIED: xml_quote_attribute no longer maps ' to &apos;  See note in
    quote.c

Nov 15, 2006

  * FIXED: properly pass <?pi> instructions.

Oct 27, 2006

  * ENHANCEMENT: Started branch XML_UNICODE to provide support for Unicode
    filenames, tags and elements.  

Aug 28, 2006

  * DOCUMENTATION: Moved to sgml.doc, using the same system as the
    remainder of the system.

Jul 25, 2006

  * FIXED: space(default) handling.  Juho Östman.

Jun 20, 2006

  * FIXED: illegal read.  Can cause wrong data and/or crashes.

Feb 16, 2006

  * ENHANCED: various improvements of the sgml_write.pl library by Richard
    O'Keefe.

Feb 12, 2006

  * ENHANCED: xml_write/3: if encoding is `text', write the data as UTF-8

Feb 9, 2006

  * FIXED: valgrind detected memory error.  Not sure whether or not it was
    a real error.

Feb 1, 2006

  * PORT: Detect inline behaviour of compiler in configure

Jan 19, 2006

  * FIXED: Allow for different deparators in in/excluded namegroup.
    Anjo Anjewierden.

Jul 7, 2005

  * ADDED: entiry(+Name, +Value) to (re-)define CDATA entity values.

Mar 31, 2005

  * ADDED: make exceptions in call-backs from sgml_parse/3 return the
    parser immediately with the given exception.

Mar 29, 2005

  * ADDED: layout(Bool) option to the xml_write/3 and friends predciates.

Mar 21, 2005

  * ADDED: specify dialect for loading DTDs.  After mail from Sebastien Cabot.

  * FIXED: Avoid error on thread_at_exit when using in single-threaded
    Prolog.  Anjo Anjewierden.

Mar 6, 2005

  * ADDED: improved namespace and indentation support for xml_write/3.

Mar 5, 2005

  * ADDED: xml_is_dom/1.  Option header(Bool) to xml_write to suppress
    writing the header.

Mar 4, 2005

  * ADDED: xmlns support to xml_write/3.

  * ENHANCED: library(sgml_write): Indent attributes if there are too many.
