@@ -1,5 +1,7 @@
 Jun 6, 2007
 
+  * MODIFIED: Avoid recursive expansion of entities, unless marked as
+    SGML content.
   * FIXED: Strict XML comment syntax.  Jacco van Ossenbruggen.
   * FIXED: give error on bad entities in XML mode.  Jacco van Ossenbruggen.
 
